<resources>
    <string name="app_name">Cocktails Quiz</string>
    <string name="action_ok">Ok</string>
    <string name="message">Something went wrong. Try again later.</string>
    <string name="high_score">high score %1s</string>
    <string name="score">score %1s</string>
    <string name="what_is_the_name">What is the name of this cocktail ?</string>
    <string name="correct_answer_is">Correct answer is</string>
    <string name="next">Next</string>
    <string name="loading">Loading...</string>
    <string name="cocktail">Cocktail</string>
</resources>