<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  Copyright (C) 2023 Harshal Tilay
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="28dp"
    android:scrollbarThumbVertical="@android:color/transparent"
    android:scrollbarTrackVertical="@android:color/transparent">

    <LinearLayout
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="26dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/gothambold"
                android:text="@string/app_name"
                android:textColor="@color/golden"
                android:textSize="30sp"
                android:textStyle="normal" />

            <ImageView
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/cocktail" />
        </LinearLayout>


        <ImageView
            android:id="@+id/iv_cocktail"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:background="@drawable/round_rect_border"
            android:contentDescription="@string/cocktail"
            android:padding="4dp"
            android:src="@drawable/cocktail" />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/digital"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="normal" />


        <LinearLayout
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/round_rect_border"
            android:orientation="vertical"
            android:padding="12dp"
            android:paddingTop="8dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:background="@color/black"
                android:fontFamily="@font/gothambold"
                android:lineSpacingExtra="7sp"
                android:text="@string/what_is_the_name"
                android:textColor="@color/golden"
                android:textSize="18sp"
                android:textStyle="normal" />

            <RadioGroup
                android:id="@+id/radio_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_input">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_option_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/golden"
                    android:fontFamily="@font/gothammedium"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:buttonTint="@color/golden" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_option_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/golden"
                    android:fontFamily="@font/gothammedium"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:buttonTint="@color/golden" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/round_rect_border"
            android:orientation="vertical"
            android:padding="12dp"
            android:paddingTop="8dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@color/black"
                android:fontFamily="@font/gothammedium"
                android:lineSpacingExtra="7sp"
                android:maxLines="2"
                android:text="@string/correct_answer_is"
                android:textColor="@color/golden"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@color/black"
                android:fontFamily="@font/gothambold"
                android:lineSpacingExtra="7sp"
                android:lines="1"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="normal" />


            <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:backgroundTint="@color/golden"
                android:fontFamily="@font/gothambold"
                android:text="@string/next"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/round_rect_border"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp"
            android:paddingTop="8dp"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foregroundTint="@color/golden" />

            <TextView
                android:id="@+id/loadingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textColor="@color/golden" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="18dp"
            android:background="@color/golden" />

        <TextView
            android:id="@+id/tv_high_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/gothamlight"
            android:textAllCaps="true"
            android:textColor="@color/golden"
            android:textSize="26sp"
            android:textStyle="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/golden" />
    </LinearLayout>
</ScrollView>





